# hr-intelligence-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/single/: hr_advisor.py  tools.py
appdocs/: ARIA-Phase0-Build-Guide.md  ARIA-Phase1-Build-Guide.md
appdocs/code/: ARIA-Codebase-Guide-Phases0-2.md  ARIA-Codebase-Guide-Phases0-3.md  ARIA-Codebase-Guide-Phases0-4.md
appdocs/demo/: ARIA-Demo-Guide-Infosys-DNA.md
appdocs/guides/: ARIA-Master-Build-Plan.md  ARIA-Phase0-Build-Guide.md  ARIA-Phase2-Build-Guide.md  ARIA-Phase3-Build-Guide.md  ARIA-Phase4-Build-Guide.md
backend/: main.py
backend/api/routes/: agent.py  chat.py  rag.py
backend/chains/: __init__.py  chat_chain.py  rag_router.py
backend/schemas/: chat.py  rag.py
config/: settings.py
database/: models.py
database/migrations/: init.sql
database/seed_data/: employees.csv  leave_records.csv  org_chart.csv
evaluation/datasets/: agent_golden_set.json  chat_golden_set.json  database_rag_golden_set.json  rag_golden_set.json
evaluation/metrics/: custom_hr_metric.py
evaluation/tests/: conftest.py  test_chat.py  test_database_rag.py  test_document_rag.py  test_single_agent.py
frontend/: app.py
rag/database_rag/: chain.py  executor.py  nl_to_sql.py  schema.py
rag/document_rag/: chain.py  chunker.py  ingestion.py  retriever.py
scripts/: create_documents.py  run_phase1_evals.py  seed_database.py
vector_store/: indexer.py  searcher.py  store.py
