[project]
name = "hr-intelligence-platform"
version = "0.1.0"
description = "A multi-agent GenAI platform for HR intelligence"
requires-python = ">=3.11"
dependencies = [
    # API and web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "httpx>=0.27.0",

    # LangChain and LangGraph
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",

    # Vector store and embeddings
    "chromadb>=0.5.0",

    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Data and documents
    "pymupdf>=1.24.0",
    "pandas>=2.0.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Evaluation
    "deepeval>=1.0.0",
]

[dependency-groups]
dev = []
